After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672471 - GDM user items are not activated on keypad Enter
GDM user items are not activated on keypad Enter
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
: 664272 674609 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-03-20 13:53 UTC by Cosimo Cecchi
Modified: 2012-07-09 17:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
st-button: treat keypad Enter keypresses like normal Enter events (1.35 KB, patch)
2012-03-20 13:53 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2012-03-20 13:53:13 UTC
In the user list at login, items can be activated by Space or Enter, but not keypad Enter.
See attached patch for a possible fix.
Comment 1 Cosimo Cecchi 2012-03-20 13:53:15 UTC
Created attachment 210180 [details] [review]
st-button: treat keypad Enter keypresses like normal Enter events

Not doing this makes some widgets inconsistent, such as the user list in
the GDM login dialog.
Comment 2 Florian Müllner 2012-03-20 14:00:14 UTC
Review of attachment 210180 [details] [review]:

Makes sense to me ...
Comment 3 Cosimo Cecchi 2012-03-20 14:14:37 UTC
Attachment 210180 [details] pushed as 5b8abe6 - st-button: treat keypad Enter keypresses like normal Enter events
Comment 4 Piotr Drąg 2012-03-20 21:22:16 UTC
*** Bug 664272 has been marked as a duplicate of this bug. ***
Comment 5 Florian Müllner 2012-07-09 17:59:12 UTC
*** Bug 674609 has been marked as a duplicate of this bug. ***