src/st/st-button.c
@@ -210,7 +210,8 @@ st_button_key_press (ClutterActor    *actor,
   if (button->priv->button_mask & ST_BUTTON_ONE)
     {
       if (event->keyval == CLUTTER_KEY_space ||
-          event->keyval == CLUTTER_KEY_Return)
+          event->keyval == CLUTTER_KEY_Return ||
+          event->keyval == CLUTTER_KEY_KP_Enter)
         {
           st_button_press (button, ST_BUTTON_ONE);
           return TRUE;
@@ -229,7 +230,8 @@ st_button_key_release (ClutterActor    *actor,
   if (button->priv->button_mask & ST_BUTTON_ONE)
     {
       if (event->keyval == CLUTTER_KEY_space ||
-          event->keyval == CLUTTER_KEY_Return)
+          event->keyval == CLUTTER_KEY_Return ||
+          event->keyval == CLUTTER_KEY_KP_Enter)
         {
           gboolean is_click;
 
